<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/BankInterestMainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgColor"
    android:orientation="vertical" >
	
    <LinearLayout
        android:id="@+id/BankInterestInformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:id="@+id/BankInterestInformationHeadline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/headlines"
            android:text="Aktuella bankräntor" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/BankInterestInformationTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:id="@+id/infoBankInteretTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoBankInteretTextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BankInfoColumnsRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/BankNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/BankNameTextView" />

        <TextView
            android:id="@+id/BankInterest1TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/BankInterest1TextView" />

        <TextView
            android:id="@+id/BankInterest2TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/BankInterest2TextView" />

        <TextView
            android:id="@+id/BankInterest3TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/BankInterest3TextView" />

        <TextView
            android:id="@+id/BankInterest4TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/BankInterest4TextView" />

        <TextView
            android:id="@+id/BankInterest5TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/BankInterest5TextView" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/bankInterestList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bankInterestThankYouRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:id="@+id/bankInterestThankYou"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/bankInterestThankYou" />

    </LinearLayout>

</LinearLayout>